@@ -47,7 +47,7 @@ public class OpenFHIRAdapter {
             String inputResource = (String) exchange.getIn().getHeader(CamelConstants.TEMP_REQUEST_RESOURCE_STRING);
         
             HttpHeaders headers = new HttpHeaders();
-            headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
+            headers.setAccept(List.of(MediaType.APPLICATION_JSON));
             headers.setContentType(MediaType.APPLICATION_JSON);
             HttpEntity <String> entity = new HttpEntity<>(inputResource, headers);
             
@@ -61,21 +61,17 @@ public class OpenFHIRAdapter {
     }
 
     public boolean checkProfileSupported(Exchange exchange) {
-        List<String> outputProfiles = null;
+        List<String> outputProfiles;
         List<String> inputProfiles = (List<String>) exchange.getIn().getHeader(CamelConstants.FHIR_INPUT_PROFILE);
         try {
             logger.info("Calling openFHIR to get profiles...");
-                    
-            HttpHeaders headers = new HttpHeaders();
-            headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
-            headers.setContentType(MediaType.APPLICATION_JSON);
             
             // Fetch the JSON response and convert it directly to List<String>
             ResponseEntity<List<String>> response = restTemplate.exchange(
                                                     openFhirUrl + "/fc/profiles",
                                                     HttpMethod.GET,
                                                     null,
-                                                    new ParameterizedTypeReference<List<String>>() {}
+                                                    new ParameterizedTypeReference<>() {}
                                                 );
             // Extract the list of profiles from the response
             outputProfiles = response.getBody();
@@ -110,7 +106,7 @@ public class OpenFHIRAdapter {
             if (getEntity.getStatusCode().value() == HttpStatus.OK.value()) {
                 try {
                     String responseBody = getEntity.getBody();
-                    if (responseBody != null && !responseBody.trim().isEmpty()) {
+                    if (!responseBody.trim().isEmpty()) {
                         XmlOptions opts = new XmlOptions();
                         opts.setLoadStripWhitespace();
                         opts.setLoadReplaceDocumentElement(new QName("http://schemas.openehr.org/v1", "template"));
@@ -147,7 +143,7 @@ public class OpenFHIRAdapter {
             XmlOptions opts = new XmlOptions();
             opts.setSaveSyntheticDocumentElement(new QName("http://schemas.openehr.org/v1", "template"));
  
-            String response = null;
+            String response;
             HttpHeaders headers = new HttpHeaders();
             headers.setContentType(MediaType.parseMediaType("application/xml;charset=UTF-8"));
             HttpEntity <String> entity = new HttpEntity<>(operationaltemplate.get().xmlText(opts), headers);
